syntax = "proto3";
package pb;

message Payload {
  bool session_cmd = 1;
  string session_id = 2;
  string stream_id = 3;
  bytes data = 4;
  string id = 5;
}
